now an handler can return any response schema, no longer void
