# spiceflow/scripts/openapi.yml
@@ -1,4 +1,12 @@
 openapi: 3.1.3
+components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+      description: Enter your JWT token
+  schemas: {}
 info:
   title: Spiceflow Documentation
   description: Development documentation
@@ -6,6 +14,18 @@ info:
 paths:
   /:
     get:
+      responses:
+        '200':
+          description: ''
+          content:
+            '*/*':
+              schema: {}
+        '500':
+          description: Internal Server Error
+          content:
+            text/plain:
+              schema:
+                type: string
       operationId: getIndex
   /stream:
     get:
@@ -13,7 +33,6 @@ paths:
         format: sse
       responses:
         '200':
-          $schema: http://json-schema.org/draft-07/schema#
           description: ''
           content:
             application/json:
@@ -27,6 +46,12 @@ paths:
                 required:
                   - count
                   - timestamp
+        '500':
+          description: Internal Server Error
+          content:
+            text/plain:
+              schema:
+                type: string
       operationId: getStream
   /users/{id}:
     get:
@@ -36,13 +61,24 @@ paths:
           in: path
           name: id
           required: true
+      responses:
+        '200':
+          description: ''
+          content:
+            '*/*':
+              schema: {}
+        '500':
+          description: Internal Server Error
+          content:
+            text/plain:
+              schema:
+                type: string
       operationId: getUsersById
   /users:
     post:
       parameters: []
       responses:
         '200':
-          $schema: http://json-schema.org/draft-07/schema#
           description: ''
           content:
             application/json:
@@ -54,6 +90,12 @@ paths:
                   data: {}
                 required:
                   - message
+        '500':
+          description: Internal Server Error
+          content:
+            text/plain:
+              schema:
+                type: string
       operationId: postUsers
       requestBody:
         required: true
@@ -76,9 +118,18 @@ paths:
                 - email
                 - age
               additionalProperties: false
-              $schema: http://json-schema.org/draft-07/schema#
   /openapi:
     get:
+      responses:
+        '200':
+          description: ''
+          content:
+            '*/*':
+              schema: {}
+        '500':
+          description: Internal Server Error
+          content:
+            text/plain:
+              schema:
+                type: string
       operationId: getOpenapi
-components:
-  schemas: {}
